removing elements to be made dynamically

--- a/PokemonSearchApp/index.html
+++ b/PokemonSearchApp/index.html
@@ -18,8 +18,9 @@
                 <h1>Pokemon Search App</h1>
                 <hr />
                 <h3>Search for Pokémon Name or ID:</h3>
-                <p><small><i>For male/female variations add 'f' or 'm' after the name</i></small></p>
-                <input id="search-input" maxlength="11" placeholder="nidoran f" required></input>
+                <p class="small">For male/female variations add 'f' or 'm' after the name. Ex: Nidoran F</p>
+                <p class="small">For special variations add variation name after the name. Ex: Oricorio Sensu</p>
+                <input id="search-input" maxlength="25" placeholder="nidoran f" required></input>
                 <button id="search-button" onclick="search()">Search</button>
             </div>
         </div>
