--- a/PalindromeChecker/index.html
+++ b/PalindromeChecker/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <input id="cash">
-    <div id="change-due"></div>
-    <button id="purchase-btn" onclick="purchase()"></button>
+    <main>
+        <div class="wrapper">
+            <h1>Is it a palindrome?</h1>
+            <input id="text-input"></input>
+            <button id="check-btn" onclick="checker()">Check</button>
+            <div id="result"></div>
+        </div>
+    </main>
     <script src="./script.js"></script>
 </body>
 
