--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Quick Links</h1>
     <p><a href="./PalindromeChecker/">Palindrome Checker</a></p>
-    <p><a href="./RomanNumeralConverter/">Roman Number Converter</a></p>
+    <p><a href="./RomanNumeralConverter/">Roman Numeral Converter</a></p>
     <p><a href="./PhoneValidator/">Telephone Number Validator</a></p>
     <p><a href="./CashRegister/">Virtual Cash Register</a></p>
     <p><a href="./PokemonSearchApp/">Pokemon Search App</a></p>
