Add html elements

--- a/PhoneValidator/index.html
+++ b/PhoneValidator/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+    <h1>Telephone Number<br />Validator</h1>
+    <div id="wrapper">
+        <div id="content">
+            <h2>Enter a phone number:</h2>
+            <input id="user-input">
+            <div id="results-div" class="results-div">
+            </div>
+        </div>
+        <div id="buttons">
+            <button id="check-btn">Check</button>
+            <button id="clear-btn">Clear</button>
+        </div>
+    </div>
 </body>
 
 </html>
