--- a/CashRegister/index.html
+++ b/CashRegister/index.html
@@ -10,9 +10,29 @@
 </head>
 
 <body>
-    <input id="cash">
-    <div id="change-due"></div>
-    <button id="purchase-btn" onclick="purchase()"></button>
+    <div id="main-content">
+        <h1>Virtual Cash Register</h1>
+        <div id="wrapper">
+            <div id="top-content">
+                <h2>Enter cash from customer</h2>
+                <input id="cash">
+                <div id="change-due"></div>
+                <button id="purchase-btn" onclick="purchase()">Purchase</button>
+            </div>
+            <div id="bottom-wrapper">
+                <div id="change-wrapper">
+                    <div id="change">
+                        <h3>Change in drawer:</h3>
+                        <p>Pennies: $0.23</p>
+                        <p>Dimes: $0.20</p>
+                    </div>
+                </div>
+                <div id="bottom-content">
+                    <h2 id="total">Total: </h2>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
