Making a cash register

--- a/CashRegister/index.html
+++ b/CashRegister/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -23,12 +24,36 @@
                 <div id="change-wrapper">
                     <div id="change">
                         <h3>Change in drawer:</h3>
-                        <p>Pennies: $0.23</p>
-                        <p>Dimes: $0.20</p>
+                        <p>Pennies: $0.97</p>
+                        <p>Nickels: $2.05</p>
+                        <p>Dimes: $2.9</p>
+                        <p>Quarters: $3.75</p>
+                        <p>Ones: $88</p>
+                        <p>Fives: $55</p>
+                        <p>Tens: $10</p>
+                        <p>Twenties: $20</p>
+                        <p>Hundreds: $100</p>
                     </div>
                 </div>
                 <div id="bottom-content">
-                    <h2 id="total">Total: </h2>
+                    <h2 id="total">$3.14</h2>
+                </div>
+            </div>
+            <div id="extra-shapes">
+                <div id="drawer-top"></div>
+                <div class="ovals">
+                    <div class="oval1"></div>
+                    <div class="oval2"></div>
+                    <div class="oval3"></div>
+                    <div class="oval4"></div>
+                    <div class="oval5"></div>
+                    <div class="oval6"></div>
+                    <div class="oval7"></div>
+                    <div class="oval8"></div>
+                    <div class="oval9"></div>
+                </div>
+                <div id="drawer-bottom">
+                    <div id="drawer-bottom-inset"></div>
                 </div>
             </div>
         </div>
