--- a/CashRegister/index.html
+++ b/CashRegister/index.html
@@ -15,28 +15,19 @@
         <h1>Virtual Cash Register</h1>
         <div id="wrapper">
             <div id="top-content">
-                <h2>Enter cash from customer</h2>
-                <input id="cash">
-                <div id="change-due"></div>
+                <h2>Enter cash from customer:</h2>
+                <input id="cash" type="number">
+                <br />
                 <button id="purchase-btn" onclick="purchase()">Purchase</button>
+                <div id="change-due">
+                </div>
             </div>
             <div id="bottom-wrapper">
                 <div id="change-wrapper">
-                    <div id="change">
-                        <h3>Change in drawer:</h3>
-                        <p>Pennies: $0.97</p>
-                        <p>Nickels: $2.05</p>
-                        <p>Dimes: $2.9</p>
-                        <p>Quarters: $3.75</p>
-                        <p>Ones: $88</p>
-                        <p>Fives: $55</p>
-                        <p>Tens: $10</p>
-                        <p>Twenties: $20</p>
-                        <p>Hundreds: $100</p>
-                    </div>
+                    <div id="change"></div>
                 </div>
                 <div id="bottom-content">
-                    <h2 id="total">$3.14</h2>
+                    <h2 id="total"></h2>
                 </div>
             </div>
             <div id="extra-shapes">
@@ -55,9 +46,20 @@
                 <div id="drawer-bottom">
                     <div id="drawer-bottom-inset"></div>
                 </div>
+                <div class="tape"></div>
+                <div class="sticky-note">
+                    <h2>Reminders:</h2>
+                    <li>Give the customer their change</li>
+                    <br />
+                    <li>Don't let them ask for the manager</li>
+                    <br />
+                    <li>Breaks are <strong><i>not</i></strong> allowed</li>
+                </div>
+
             </div>
         </div>
     </div>
+    <br />
     <script src="./script.js"></script>
 </body>
 
